# AvaloniaApplication1

./: .gitignore  App.cs  AvaloniaApplication1.csproj  AvaloniaApplication1.sln
copilot/: ImageHelper.cs  ZAsync.cs  ZEnv.cs  ZLruCache.cs
global/: NavigationStore.cs  Router.cs  ZNavigator.cs
my_rust_lib/: Cargo.toml  build.bat
my_rust_lib/src/: coroutineSample.rs  lib.rs  main.rs
my_rust_lib/src/test/: mod.rs  mpsc_test.rs
native/: my_rust_lib.cs
ui/: MainWindow.cs
ui/components/: AsyncImage.cs  ImagePageListBox.cs  ImagePageRepeater.cs  ImagePageVm.cs
ui/pages/main/: GridListComponent.cs  GridListComponentVM.cs  HomeComponent.cs  MainShell.cs  SettingsComponent.cs  SideMenu.cs  SideMenuVM.cs
ui/pages/test/: NativeTest.cs  TestVm.cs
ui/style/: ButtonStyle.cs  ButtonStyleExtension.cs
vm/: MainViewModel.cs  NavigationStore.cs
