[package]
name = "my_rust_lib"
version = "0.1.0"
edition = "2024"

# 你的代码依然保持 0 优化（方便调试变量，编译快）
[profile.dev]
opt-level = 0

# 但是！所有的依赖库（dependencies）都用最高优化编译
[profile.dev.package."*"]
opt-level = 3

[dependencies]
image = "0.25.9"
rayon = "1.11.0"
walkdir = "2.5.0"


[lib]
# "cdylib" 给 C# 用 (生成 DLL)
# "rlib"   给 main.rs 用 (Rust 内部静态链接)
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"        # 默认就是 src/lib.rs，通常不用写